--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [master]
   pull_request:
-    branches: [master]
 
 jobs:
   build:
@@ -13,39 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up PureScript toolchain
-        uses: purescript-contrib/setup-purescript@main
-
-      - name: Cache PureScript dependencies
-        uses: actions/cache@v2
+      - uses: purescript-contrib/setup-purescript@main
         with:
-          key: ${{ runner.os }}-spago-${{ hashFiles('**/*.dhall') }}
-          path: |
-            .spago
-            output
+          purescript: "latest"
+          purs-tidy: "latest"
+          spago: "next"
 
-      - name: Set up Node toolchain
-        uses: actions/setup-node@v1
-        with:
-          node-version: "14.x"
-
-      - name: Cache NPM dependencies
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-
-      - name: Install NPM dependencies
-        run: npm install
-
-      - name: Build the project
-        run: spago build && spago --version && purs --version
+      - name: Build source
+        run: spago build --pedantic-packages
 
       - name: Run tests
-        run: spago test
+        run: spago test --pedantic-packages
+
+      - name: Verify formatting
+        run: purs-tidy check src test
