--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "clean": "rimraf output && rimraf .pulp-cache",
-    "build": "pulp build -- --censor-lib --strict",
-    "test": "pulp test"
+    "clean": "rimraf output && rimraf .spago",
+    "build": "spago build --censor-stats --strict --pedantic-packages --ensure-ranges",
+    "format": "purs-tidy format-in-place src/**/*.purs",
+    "test": "spago test",
+    "update-docs": "spago docs --format markdown"
   },
   "devDependencies": {
-    "pulp": "^12.0.0",
-    "purescript": "^0.12.0",
-    "purescript-psa": "^0.5.0",
-    "rimraf": "^2.5.0"
+    "rimraf": "^6.0.1"
   }
 }
