--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: purescript-contrib/setup-purescript@main
         with:
-          purescript: "unstable"
+          purs: "unstable"
           purs-tidy: "unstable"
           spago: "unstable"
 
